syntax = "proto3";

option java_package = "fctreddit.impl.grpc.generated_java";
option java_outer_classname = "UsersAdminProtoBuf";

import "google/protobuf/empty.proto";

service UsersAdmin {

	rpc checkUser( CheckUserArgs ) returns (google.protobuf.Empty){}	

}

message CheckUserArgs {
	string userId = 1;
	string password = 2;
	string token = 3;
}